--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -30,21 +30,12 @@
         transform: translate(-50%, -50%) scale(.1);
         transition: all .4s .2s;
         padding: 2rem 0 2rem 0;
-
-        @include respond(tab-port) {
-            width: 95%;
-            padding: 2rem;
-        }
     }
 
     &__left {
         width: 33.33333333%;
         display: table-cell;
         vertical-align: middle;
-
-        @include respond(tab-port) {
-            display: none;
-        }
     }
 
     &__right {
@@ -58,10 +49,6 @@
         display: block;
         width: 100%;
         padding-right: 2rem;
-
-        @include respond(phone) {
-            width: 0%;
-        }
     }
 
     &__text {
@@ -79,17 +66,6 @@
         -ms-hyphens: auto;
         -webkit-hyphens: auto;
         hyphens: auto;
-
-        @include respond(tab-port) {
-            height: 30rem;
-            width: 95%;
-            font-size: 3rem;
-
-            column-count: 1;
-            column-gap: 3rem; //1em 14px;
-            column-rule: none;
-            overflow-y: scroll;
-        }
     }
 
     &:target &__content {
@@ -110,17 +86,84 @@
             transition: all .2s;
             line-height: 1;
 
-            @include respond(tab-port) {
-                font-size: 6rem;
-            }
-
-            @include respond(phone) {
-                font-size: 6rem;
-            }
         }
 
         &:hover {
             color: $color-primary;
+        }
+    }
+
+
+//-------------------------------------------------------------------------------------------------------------------------------------------------------
+
+
+    @include respond(tab-port) {
+
+        &__content {
+            height: 80%;
+            width: 60%;
+            background-color: $color-grey-light-1;
+            @include boxShadow;
+            border-radius: 3px;
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows:1.5fr;
+            gap: 1px 1px;
+            grid-template-areas: "text";
+            justify-items: center;
+            align-items: center;
+            opacity: 0;
+            transform: translate(-50%, -50%) scale(.1);
+            transition: all .4s .2s;
+        }
+    
+        &__left {
+            display: none;
+        }
+    
+        &__right {
+            display: block;
+            padding: 0;
+        }
+    
+        &__img {
+            display: none;
+        }
+
+        &__overflow {
+            height: 40rem;
+            overflow-y: scroll;
+            overflow-x: hidden;
+            margin-bottom: 3rem;
+        }
+    
+        &__text {
+            font-size: 2.1rem;
+            padding: 0rem;
+            column-count: 1;
+            column-gap: 0; 
+            column-rule: none;
+            hyphens: none;
+        }
+    
+        &:target &__content {
+            opacity: 1;
+            transform: translate(-50%, -50%) scale(1);
+        }
+    
+        &__close {
+            &:link,
+            &:visited {
+                color: $color-grey-dark;
+                position: absolute;
+                top: 2.5rem;
+                right: 2.5rem;
+                font-size: 6rem;
+                text-decoration: none;
+                display: inline-block;
+                transition: all .2s;
+                line-height: 1;
+            }
         }
     }
 }
